Fix layout problems

--- a/apps/ui/src/app/AppComponent.scss
+++ b/apps/ui/src/app/AppComponent.scss
@@ -7,7 +7,8 @@
 
 .app-root__content {
   flex-grow: 1;
-  flex-shrink: 0;
+  flex-shrink: 1;
+  overflow: hidden;
   padding: var(--content-padding);
 }
 
