--- a/apps/ui/src/ui/ast-presenter/ASTPresenterComponent.scss
+++ b/apps/ui/src/ui/ast-presenter/ASTPresenterComponent.scss
@@ -1,3 +1,7 @@
+:host {
+  width: 100%;
+}
+
 :host ::ng-deep .p-treenode-content {
   padding: 0;
 }
